tests/paczka1/small_fuzzy/97844198.err
Error in line 3: 50S4 S563 4,3
Error in line 2: WDV649 S71 56,6
Error in line 8: dwfDt S71 139,7
